Color piker refactor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7297 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ColorPicker.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ColorPicker.mxml
@@ -34,8 +34,8 @@
 				
 				addEventListener( MouseEvent.CLICK, mouseClickandler );
 				
-				addEventListener( "apply", colorCompleteHandler );
-				addEventListener( "cancel", colorCompleteHandler );
+				addEventListener( ColorPickerEvent.APPLY, applyHandler );
+//				addEventListener( "cancel", colorCompleteHandler );
 			}
 			
 			[Bindable( event="valueCommit" )]
@@ -63,13 +63,10 @@
 				
 			}
 			
-			private function colorCompleteHandler( event : ColorPickerEvent ) : void
+			private function applyHandler( event : ColorPickerEvent ) : void
 			{
-				if ( event.type == 'apply' )
-				{
 					value = event.hexcolor;
 					dispatchEvent(new ColorPickerEvent(ColorPickerEvent.CHANGE, event.color, value));
-				}
 			}
 		]]>
 	</fx:Script>
