--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
@@ -136,7 +136,7 @@
 					<s:List id="resourcesList" 
 							left="4" right="2" top="4" bottom="0" 
 							width="100%" height="100%" 
-							allowMultipleSelection="{hostComponent.multilineSelected}"
+							allowMultipleSelection="{hostComponent.multiSelect}"
 							borderVisible="false" chromeColor="#777777" contentBackgroundAlpha="0"
 							contentBackgroundColor="#383838"
 							selectionColor="#383838"
