--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
@@ -2,7 +2,12 @@
 <s:SparkSkin xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*"
 			 xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:mx="library://ns.adobe.com/flex/halo"
-			 xmlns:s="library://ns.adobe.com/flex/spark" width="100%" height="100%">
+			 xmlns:s="library://ns.adobe.com/flex/spark" width="100%" height="100%" xmlns:components1="net.vdombox.components.*">
+	<fx:Script>
+		<![CDATA[
+			import net.vdombox.components.VDOMScroller;
+		]]>
+	</fx:Script>
 	
 	
 	<s:states>
@@ -32,7 +37,7 @@
 		</s:stroke>
 	</s:Rect>
 	
-	<s:Scroller id="scroller"
+	<components1:VDOMScroller id="scroller"
 				focusEnabled="false"
 				bottom="0" left="0" right="0" top="0" 
 				minViewportInset="1">
@@ -50,7 +55,7 @@
 			
 			<components:TransformMarker id="transformMarker"/>
 		</s:Group>
-	</s:Scroller>
+	</components1:VDOMScroller>
 
 	<s:Group id="locker"
 			 bottom="0" left="0" right="0" top="0"
