--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/WorkAreaSkin.mxml
@@ -3,7 +3,7 @@
 			 xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:mx="library://ns.adobe.com/flex/mx"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 creationComplete="creationCompleteHandler()">
+			 creationComplete="creationCompleteHandler()" xmlns:components1="net.vdombox.components.*">
 
 	<fx:Metadata>
 		<![CDATA[ 
@@ -140,7 +140,7 @@
 			</s:fill>
 		</s:Rect>
 
-		<s:Scroller id="scroller"
+		<components1:VDOMScroller id="scroller"
 					height="100%" width="100%">
 			<s:VGroup paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5">
 				<s:Group>
@@ -148,6 +148,6 @@
 					<s:Group id="contentGroup"/>
 				</s:Group>
 			</s:VGroup>
-		</s:Scroller>
+		</components1:VDOMScroller>
 	</s:Group>
 </s:SparkSkin>
