git-svn-id: http://svn.vdombox.ru/flextools/trunk@7318 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
@@ -65,10 +65,7 @@
 					
 					if( objectNameGroup )
 					{
-						if( data is ClientActionVO )
-							objectNameGroup.visible = true;
-						else
-							objectNameGroup.visible = false;
+						objectNameGroup.visible = data is ClientActionVO;
 					}
 				}
 			}
@@ -98,11 +95,7 @@
 				if ( !data )
 					return;
 
-				if ( skin.currentState == "normal" || skin.currentState == "disabled" )
-					data.state = true;
-				else
-					data.state = false;
-
+				data.state = skin.currentState == "normal" || skin.currentState == "disabled" ;
 			}
 			
 		]]>
