--- a/IDE/v.02/common/src/net/vdombox/view/skins/TabNavigatorScrollBarSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/TabNavigatorScrollBarSkin.mxml
@@ -3,8 +3,7 @@
 <s:SparkSkin xmlns:fb="http://ns.adobe.com/flashbuilder/2009"
 			 xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 minHeight="15" minWidth="35"
-			 alpha.disabled="0.5" alpha.inactive="0.5">
+			 minHeight="15" minWidth="35">
 
 	<fx:Metadata>
 		<![CDATA[ 
