--- a/IDE/v.02/common/src/net/vdombox/view/skins/TabBarCloseButtonSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/TabBarCloseButtonSkin.mxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 minHeight="12" minWidth="12"
-			 alpha.disabled="0.5">
+			 minHeight="12" minWidth="12" maxWidth="12">
 
 	<fx:Metadata>
 		[HostComponent("spark.components.Button")] 
@@ -10,7 +9,7 @@
 
 	<fx:Declarations>
 		<s:SolidColorStroke id="stroke1"
-							color="#cccccc" color.over="#eeeeee"
+							color="#cccccc" color.over="#aaaaaa"
 							weight="2"/>
 	</fx:Declarations>
 
@@ -24,7 +23,7 @@
 	<s:Rect id="fill"
 			height="10" width="10">
 		<s:fill>
-			<s:SolidColor color="0x808080" color.over="0xff3030"/>
+			<s:SolidColor color="black" alpha="0.01"/>
 		</s:fill>
 	</s:Rect>
 
