--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectAttributesPanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectAttributesPanel.mxml
@@ -14,11 +14,13 @@
 			import mx.collections.SortField;
 			import mx.events.FlexEvent;
 			
+			import net.vdombox.components.VDOMScroller;
 			import net.vdombox.ide.common.vo.AttributeDescriptionVO;
 			import net.vdombox.ide.common.vo.AttributeVO;
 			import net.vdombox.ide.common.vo.TypeVO;
 			import net.vdombox.ide.common.vo.VdomObjectAttributesVO;
 			import net.vdombox.ide.modules.wysiwyg.events.ObjectAttributesPanelEvent;
+			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 
 			private var _attributesVO : VdomObjectAttributesVO;
 			private var _typeVO : TypeVO;
@@ -108,6 +110,12 @@
 				tbFill.minHeight = 41;
 			}
 			
+			protected function attributesList_creationCompleteHandler(event:FlexEvent):void
+			{
+				// TODO Auto-generated method stub
+				attributesList.scroller.verticalScrollBar.setStyle( "skinClass", VDOMVScrollBarSkin );
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -124,7 +132,7 @@
 		<s:List id="attributesList" height="100%" width="100%"  borderVisible="false"
 				change="dispatchEvent( new ObjectAttributesPanelEvent( ObjectAttributesPanelEvent.CURRENT_ATTRIBUTE_CHANGED ))"
 				useVirtualLayout="false" itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.AttributeBase"
-				contentBackgroundAlpha="0">
+				contentBackgroundAlpha="0" creationComplete="attributesList_creationCompleteHandler(event)">
 			
 			<s:layout>
 				<s:VerticalLayout gap="0"
