--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
@@ -5,7 +5,18 @@
 			 xmlns:s="library://ns.adobe.com/flex/spark" width="100%" height="100%" xmlns:components1="net.vdombox.components.*">
 	<fx:Script>
 		<![CDATA[
+			import mx.events.FlexEvent;
+			
 			import net.vdombox.components.VDOMScroller;
+			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMHScrollBarSkin;
+			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
+			
+			protected function scroller_creationCompleteHandler(event:FlexEvent):void
+			{
+				scroller.verticalScrollBar.setStyle("skinClass", VDOMVScrollBarSkin );
+				scroller.horizontalScrollBar.setStyle("skinClass", VDOMHScrollBarSkin );
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -40,7 +51,7 @@
 	<components1:VDOMScroller id="scroller"
 				focusEnabled="false"
 				bottom="0" left="0" right="0" top="0" 
-				minViewportInset="1">
+				minViewportInset="1" creationComplete="scroller_creationCompleteHandler(event)">
 
 		<s:Group>
 			<s:Group id="background" width="{dataGroup.width}" height="{dataGroup.height}"
