--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsView.mxml
@@ -8,6 +8,7 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
+			import net.vdombox.components.VDOMScroller;
 			import net.vdombox.ide.core.events.ApplicationManagerEvent;
 			
 			
