--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/WorkAreaSkin.mxml
@@ -15,8 +15,10 @@
 		<![CDATA[
 			import mx.binding.utils.BindingUtils;
 			import mx.events.FlexEvent;
-
+			
 			import net.vdombox.ide.modules.tree.events.WorkAreaEvent;
+			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMHScrollBarSkin;
+			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 
 			private var isExpanded : Boolean;
 
@@ -64,6 +66,14 @@
 
 				hostComponent.isSignatureShowed = !hostComponent.isSignatureShowed;
 			}
+			
+			protected function scroller_creationCompleteHandler(event:FlexEvent):void
+			{
+				// TODO Auto-generated method stub
+				scroller.verticalScrollBar.setStyle( "skinClass", VDOMVScrollBarSkin );
+				scroller.horizontalScrollBar.setStyle( "skinClass", VDOMHScrollBarSkin );
+			}
+			
 		]]>
 	</fx:Script>
 
@@ -141,7 +151,7 @@
 		</s:Rect>
 
 		<components1:VDOMScroller id="scroller"
-					height="100%" width="100%">
+					height="100%" width="100%" creationComplete="scroller_creationCompleteHandler(event)">
 			<s:VGroup paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5">
 				<s:Group>
 					<s:Group id="linkagesLayer"/>
