--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
@@ -203,11 +203,11 @@
 			
 				<mx:Spacer width="100%" />
 			
-				<components:VdomButton width="48"
+				<components:VDOMButton width="48"
 						  icon="@Embed(source='icons/Cancel.png')"
 					  	  click="hostComponent.cancel_close_window()" />
 			
-				<components:VdomButton label="{ resourceManager.getString( 'Wysiwyg_General', 'color_picker_window_use' ) }"
+				<components:VDOMButton label="{ resourceManager.getString( 'Wysiwyg_General', 'color_picker_window_use' ) }"
 					  	  click="hostComponent.ok_close_window()" />
 			</mx:ControlBar>	
 		
