--- a/IDE/v.02/common/src/net/vdombox/view/skins/AlertSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/AlertSkin.mxml
@@ -42,11 +42,11 @@
 					 fontSize="16" color="#FFFFFF" text="{hostComponent.text}"/>
 			
 			<s:HGroup height="29" width="100%" horizontalAlign="center" gap="40">
-				<components:VdomButton  id="noButton" tabIndex="1"
+				<components:VDOMButton  id="noButton" tabIndex="1"
 							label="{hostComponent.getNoLabel()}"
 							visible="{hostComponent.getVisibleNoButton()}" includeInLayout="{hostComponent.getVisibleNoButton()}"
 							click="hostComponent.btnClickHandler(Alert.NO)" keyDown="hostComponent.keyNoPush(event)"/>
-				<components:VdomButton  id="yesButton" tabIndex="2"
+				<components:VDOMButton  id="yesButton" tabIndex="2"
 							icon="@Embed('net/vdombox/icons/Cancel.png')" label="{hostComponent.getYesLabel()}"
 							click="hostComponent.btnClickHandler(Alert.YES)" keyDown="hostComponent.keyYesPush(event)"/>
 			</s:HGroup>
